# ZAI

./: .env  .gitignore  Cargo.toml  README.md  makefile  package-lock.json
migrations/: 20240322172848_initial.sql
src/: database.rs  main.rs  svg.rs  templates.rs
static/: style.css
static/images/avatars/: admin
